// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallations should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Installations
        </h1>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="ec47sgk-el-mb11 ejadz4k-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1co3p83-el-table-header"
          >
            Customer Name
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Reapit Customer Code
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Customer Address
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Date Installed
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Installed By
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <input
            class="e1yynswi-el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Installations
      </h1>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="ec47sgk-el-mb11 ejadz4k-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1co3p83-el-table-header"
        >
          Customer Name
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Reapit Customer Code
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Customer Address
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Date Installed
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Installed By
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <input
          class="e1yynswi-el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Installations
        </h1>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Installations
      </h1>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no installations 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Installations
        </h1>
      </div>
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          No installations for the application.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Installations
      </h1>
    </div>
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
    >
      <div
        class="eta6kcl-el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="e1geon40-el-pn-content"
      >
        No installations for the application.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no response 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Installations
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Installations
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Installations
        </h1>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
            >
              Controls
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="ec47sgk-el-mb11 ejadz4k-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1co3p83-el-table-header"
          >
            Customer Name
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Reapit Customer Code
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Customer Address
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Date Installed
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Installed By
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <input
            class="e1yynswi-el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Installations
      </h1>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
          >
            Controls
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="ec47sgk-el-mb11 ejadz4k-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1co3p83-el-table-header"
        >
          Customer Name
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Reapit Customer Code
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Customer Address
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Date Installed
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Installed By
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <input
          class="e1yynswi-el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
